--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -2,6 +2,6 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Math Game</h1>
 
-Welcome to your new app.
+<p>Welcome in this Math Game. Select about Game and start to play</p>
